--- a/team.html
+++ b/team.html
@@ -263,7 +263,7 @@
                             <img src="img/team/4.jpg" alt="Image">
                         </div>
                         <div class="team-info">
-                            <h4><a href="team-details.html">Rosalina Dias</a></h4>
+                            <h4>Rosalina Dias</h4>
                             <h6 class="ltn__secondary-color"> Corretor de Imóveis</h6>
                             <div class="ltn__social-media">
                                 <ul>
@@ -281,7 +281,7 @@
                             <img src="img/team/2.png" alt="Image">
                         </div>
                         <div class="team-info">
-                            <h4><a href="team-details.html">Aline Oliveira</a></h4>
+                            <h4>Aline Oliveira</h4>
                             <h6 class="ltn__secondary-color">Agentes de Venda</h6>
                             <div class="ltn__social-media">
                                 <ul>
@@ -299,7 +299,7 @@
                             <img src="img/team/3.jpg" alt="Image">
                         </div>
                         <div class="team-info">
-                            <h4><a href="team-details.html">Marcia Diel</a></h4>
+                            <h4>Marcia Diel</h4>
                             <h6 class="ltn__secondary-color">Vendedor de imóveis</h6>
                             <div class="ltn__social-media">
                                 <ul>
@@ -317,7 +317,7 @@
                             <img src="img/team/1.jpg" alt="Image">
                         </div>
                         <div class="team-info">
-                            <h4><a href="team-details.html">Celso Dambros</a></h4>
+                            <h4>Celso Dambros</h4>
                             <h6 class="ltn__secondary-color">Vendedor de imóveis</h6>
                             <div class="ltn__social-media">
                                 <ul>
@@ -335,7 +335,7 @@
                             <img src="img/team/5.jpg" alt="Image">
                         </div>
                         <div class="team-info">
-                            <h4><a href="team-details.html">Beijamim Lorck</a></h4>
+                            <h4>Beijamim Lorck</h4>
                             <h6 class="ltn__secondary-color">Corretor de imóveis</h6>
                             <div class="ltn__social-media">
                                 <ul>
@@ -353,7 +353,7 @@
                             <img src="img/team/6.webp" alt="Image">
                         </div>
                         <div class="team-info">
-                            <h4><a href="team-details.html">Jorge Luis</a></h4>
+                            <h4>Jorge Luis</h4>
                             <h6 class="ltn__secondary-color">Agente de vendas</h6>
                             <div class="ltn__social-media">
                                 <ul>
@@ -379,7 +379,7 @@
                             <p>Podemos ajudá-lo a realizar o seu sonho de uma nova casa</p>
                         </div>
                         <div class="btn-wrapper">
-                            <a class="btn btn-effect-3 btn-white" href="contact.html">Explorar propriedades<i class="icon-next"></i></a>
+                            <a class="btn btn-effect-3 btn-white" href="shop-grid.html">Explorar propriedades<i class="icon-next"></i></a>
                         </div>
                     </div>
                 </div>
@@ -414,7 +414,7 @@
                                             <i class="icon-call"></i>
                                         </div>
                                         <div class="footer-address-info">
-                                            <p><a href="tel:+0123-456789">+0123-456789</a></p>
+                                            <p><a href="tel:+55 48 991740401">+55 48 991740401</a></p>
                                         </div>
                                     </li>
                                     <li>
@@ -431,7 +431,7 @@
                                 <ul>
                                     <li><a href="#" title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
                                     <li><a href="#" title="Twitter"><i class="fab fa-twitter"></i></a></li>
-                                    <li><a href="#" title="Linkedin"><i class="fab fa-linkedin"></i></a></li>
+                                    <li><a href="#" title="Instagram"><i class="fab fa-instagram"></i></a></li>
                                     <li><a href="#" title="Youtube"><i class="fab fa-youtube"></i></a></li>
                                 </ul>
                             </div>
@@ -443,7 +443,7 @@
                             <div class="footer-menu">
                                 <ul>
                                     <li><a href="about.html">Sobre</a></li>
-                                    <li><a href="service-details.html">Blog</a></li>
+                                    <li><a href="blog.html">Blog</a></li>
                                     <li><a href="product-details.html">Todos os produtos</a></li>
                                 </ul>
                             </div>
@@ -454,7 +454,7 @@
                             <h4 class="footer-title">Serviços</h4>
                             <div class="footer-menu">
                                 <ul>
-                                    <li><a href="contact.html">Contato</a></li>
+                                    <li><a href="contact.html">Conecte-se</a></li>
                                     <li><a href="account.html">Minha conta</a></li>
                                     <li><a href="about.html">Termos e Condições</a></li>
                                 </ul>
@@ -463,12 +463,12 @@
                     </div>
                     <div class="col-xl-2 col-md-6 col-sm-6 col-12">
                         <div class="footer-widget footer-menu-widget clearfix">
-                            <h4 class="footer-title">Atendimento ao cliente</h4>
+                            <h4 class="footer-title">Cliente</h4>
                             <div class="footer-menu">
                                 <ul>
-                                    <li><a href="contact.html">Contato</a></li>
+                                    <li><a href="login.html">Conecte-se</a></li>
                                     <li><a href="account.html">Minha conta</a></li>
-                                    <li><a href="service-details.html">Serviços</a</li>
+                                    <li><a href="contact.html"></a>Contate-nos</li>
                                 </ul>
                             </div>
                         </div>
