--- a/account.html
+++ b/account.html
@@ -1133,7 +1133,7 @@
                                                 <i class="icon-call"></i>
                                             </div>
                                             <div class="footer-address-info">
-                                                <p><a href="tel:+0123-456789">48 991740106</a></p>
+                                                <p><a href="tel:+55 48 991740401">+55 48 991740401</a></p>
                                             </div>
                                         </li>
                                         <li>
@@ -1162,7 +1162,7 @@
                                 <div class="footer-menu">
                                     <ul>
                                         <li><a href="about.html">Sobre</a></li>
-                                        <li><a href="service-details.html">Blog</a></li>
+                                        <li><a href="blog.html">Blog</a></li>
                                         <li><a href="product-details.html">Todos os produtos</a></li>
                                     </ul>
                                 </div>
@@ -1173,7 +1173,7 @@
                                 <h4 class="footer-title">Serviços</h4>
                                 <div class="footer-menu">
                                     <ul>
-                                        <li><a href="contact.html">Contato</a></li>
+                                        <li><a href="contact.html">Conecte-se</a></li>
                                         <li><a href="account.html">Minha conta</a></li>
                                         <li><a href="about.html">Termos e Condições</a></li>
                                     </ul>
@@ -1185,9 +1185,9 @@
                                 <h4 class="footer-title">Cliente</h4>
                                 <div class="footer-menu">
                                     <ul>
-                                        <li><a href="contact.html">Conecte-se</a></li>
+                                        <li><a href="login.html">Conecte-se</a></li>
                                         <li><a href="account.html">Minha conta</a></li>
-                                        <li><a href="service-details.html">Serviços</a</li>
+                                        <li><a href="contact.html"></a>Contate-nos</li>
                                     </ul>
                                 </div>
                             </div>
