--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Imobiliaria Santos</title>
+    <title>Santos Imobiliária</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -25,8 +25,8 @@
                     <div class="col-md-7">
                         <div class="ltn__top-bar-menu">
                             <ul>
-                                <li><a href="mailto:info@webmail.com?Subject=Flower%20greetings%20to%20you"><i class="icon-mail"></i>santos@gmail.com</a></li>
-                                <li><a href=""><i class="icon-placeholder"></i>Rua Amaro José Pareira</a></li>
+                                <li><i class="icon-mail"></i>santos@gmail.com</li>
+                                <li><i class="icon-placeholder"></i>Rua Amaro José Pareira</li>
                             </ul>
                         </div>
                     </div>
@@ -40,11 +40,6 @@
                                                 <li><a href="#" title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
                                                 <li><a href="#" title="Twitter"><i class="fab fa-twitter"></i></a></li>
                                                 <li><a href="#" title="Instagram"><i class="fab fa-instagram"></i></a></li>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="header-top-btn">
-                                            <a href="add-listing.html">Adicionar Listagem</a>
                                         </div>
                                     </li>
                                 </ul>
@@ -67,10 +62,6 @@
                                 <div class="get-support-icon">
                                     <i class="icon-call"></i>
                                 </div>
-                                <div class="get-support-info">
-                                    <h6>Get Support</h6>
-                                    <h4><a href="tel:+123456789">123-456-789-10</a></h4>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -84,18 +75,17 @@
                                                 <li><a href="about.html">Sobre</a></li>
                                                 <li><a href="service.html">Serviços</a></li>
                                                 <li><a href="team.html">Equipe</a></li>
-                                                <li><a href="locations.html">locais do mapa do Google</a></li>
                                             </ul>
                                         </li>
 
                                         <li><a href="#">Comprar</a>
                                             <ul class="sub-menu">
-                                                <li><a href="shop-grid.html">Grade da loja</a></li>
-                                                <li><a href="shop-left-sidebar.html">Barra lateral esquerda da loja</a></li>
-                                                <li><a href="shop-right-sidebar.html">Comprar barra lateral direita</a></li>
-                                                <li><a href="product-details.html">Detalhes da loja</a></li>
+                                                <li><a href="shop-grid.html">Encontrar imóvel</a></li>
+                                                <li><a href="shop-left-sidebar.html">Lateral esquerda</a></li>
+                                                <li><a href="shop-right-sidebar.html">Lateral direita</a></li>
+                                                <li><a href="product-details.html">Detalhes</a></li>
                                                 <li><a href="account.html">Minha conta</a></li>
-                                                <li><a href="login.html">Entrar</a></li>
+                                                <li><a href="login.html">Conecte-se</a></li>
                                                 <li><a href="register.html">Registro</a></li>
                                             </ul>
                                         </li>
@@ -107,7 +97,7 @@
                                                 <li><a href="service.html">Serviços</a></li>
                                                 <li><a href="team.html">Equipe</a></li>
                                                 <li><a href="history.html">História</a></li>
-                                                <li><a href="locations.html">Locais no mapa do Google</a></li>
+                                                <li><a href="login.html">Conecte-se</a></li>
                                                 <li><a href="contact.html">Contato</a></li>
                     
                                             </ul>
@@ -141,7 +131,7 @@
                                 <li>
                                     <a href="#"><i class="icon-user"></i></a>
                                     <ul>
-                                        <li><a href="login.html">Fazer login</a></li>
+                                        <li><a href="login.html">Conecte-se</a></li>
                                         <li><a href="register.html">Registro</a></li>
                                         <li><a href="account.html">Minha conta</a></li>
                                     </ul>
@@ -186,18 +176,17 @@
                             <li><a href="about.html">Sobre</a></li>
                             <li><a href="service.html">Serviços</a></li>
                             <li><a href="team.html">Equipe</a></li>
-                            <li><a href="locations.html">locais do mapa do Google</a></li>
                         </ul>
                     </li>
 
                     <li><a href="#">Comprar</a>
                         <ul class="sub-menu">
-                            <li><a href="shop-grid.html">Grade da loja</a></li>
-                            <li><a href="shop-left-sidebar.html">Barra lateral esquerda da loja</a></li>
-                            <li><a href="shop-right-sidebar.html">Comprar barra lateral direita</a></li>
-                            <li><a href="product-details.html">Detalhes da loja</a></li>
+                            <li><a href="shop-grid.html">Encontrar imóvel</a></li>
+                            <li><a href="shop-left-sidebar.html">Lateral esquerda</a></li>
+                            <li><a href="shop-right-sidebar.html">Lateral direita</a></li>
+                            <li><a href="product-details.html">Detalhes</a></li>
                             <li><a href="account.html">Minha conta</a></li>
-                            <li><a href="login.html">Entrar</a></li>
+                            <li><a href="login.html">Conecte-se</a></li>
                             <li><a href="register.html">Registro</a></li>
                         </ul>
                     </li>
@@ -209,8 +198,8 @@
                             <li><a href="service.html">Serviços</a></li>
                             <li><a href="service-details.html">Detalhes do serciços</a></li>
                             <li><a href="team.html">Equipe</a></li>
+                            <li><a href="login.html">Conecte-se</a></li>
                             <li><a href="history.html">História</a></li>
-                            <li><a href="locations.html">Locais no mapa do Google</a></li>
                             <li><a href="contact.html">Contato</a></li>
                         </ul>
                     </li>
@@ -268,7 +257,7 @@
                         <div class="ltn__breadcrumb-list">
                             <ul>
                                 <li><a href="index.html"><span class="ltn__secondary-color"><i class="fas fa-home"></i></span> Home</a></li>
-                                <li>Registro</li>
+                                <li>Registre-se</li>
                             </ul>
                         </div>
                     </div>
@@ -282,7 +271,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title-area text-center">
-                        <h1 class="section-title">Registro <br>Sua conta</h1>
+                        <h1 class="section-title">Registre <br>Sua conta</h1>
                         <p></p>
                     </div>
                 </div>
@@ -332,7 +321,7 @@
                             <p>Podemos ajudá-lo a realizar o seu sonho de uma nova casa</p>
                         </div>
                         <div class="btn-wrapper">
-                            <a class="btn btn-effect-3 btn-white" href="contact.html">Explorar propriedades<i class="icon-next"></i></a>
+                            <a class="btn btn-effect-3 btn-white" href="product-details.html">Explorar propriedades<i class="icon-next"></i></a>
                         </div>
                     </div>
                 </div>
@@ -367,7 +356,7 @@
                                             <i class="icon-call"></i>
                                         </div>
                                         <div class="footer-address-info">
-                                            <p><a href="tel:+0123-456789">+0123-456789</a></p>
+                                            <p><a href="tel:+55 48 991740401">+55 48 991740401</a></p>
                                         </div>
                                     </li>
                                     <li>
@@ -396,7 +385,7 @@
                             <div class="footer-menu">
                                 <ul>
                                     <li><a href="about.html">Sobre</a></li>
-                                    <li><a href="service-details.html">Blog</a></li>
+                                    <li><a href="blog.html">Blog</a></li>
                                     <li><a href="product-details.html">Todos os produtos</a></li>
                                 </ul>
                             </div>
@@ -407,7 +396,7 @@
                             <h4 class="footer-title">Serviços</h4>
                             <div class="footer-menu">
                                 <ul>
-                                    <li><a href="contact.html">Contato</a></li>
+                                    <li><a href="contact.html">Conecte-se</a></li>
                                     <li><a href="account.html">Minha conta</a></li>
                                     <li><a href="about.html">Termos e Condições</a></li>
                                 </ul>
@@ -416,12 +405,12 @@
                     </div>
                     <div class="col-xl-2 col-md-6 col-sm-6 col-12">
                         <div class="footer-widget footer-menu-widget clearfix">
-                            <h4 class="footer-title">Atendimento ao cliente</h4>
+                            <h4 class="footer-title">Cliente</h4>
                             <div class="footer-menu">
                                 <ul>
-                                    <li><a href="contact.html">Contato</a></li>
+                                    <li><a href="login.html">Conecte-se</a></li>
                                     <li><a href="account.html">Minha conta</a></li>
-                                    <li><a href="service-details.html">Serviços</a</li>
+                                    <li><a href="contact.html"></a>Contate-nos</li>
                                 </ul>
                             </div>
                         </div>
