--- a/register.html
+++ b/register.html
@@ -248,7 +248,7 @@
     </div>
 
     <div class="ltn__utilize-overlay"></div>
-    <div class="ltn__breadcrumb-area text-left bg-overlay-white-30 bg-image "  data-bg="img/bg/14.jpg">
+    <div class="ltn__breadcrumb-area text-left bg-overlay-white-30 bg-image "  data-bg="img/bg/14.png">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
