--- a/product1-detaisl.html
+++ b/product1-detaisl.html
@@ -262,7 +262,7 @@
                     <div class="col-lg-12">
                         <div class="ltn__img-slide-item-4">
                             <a href="img/img-slide/36.jpg" data-rel="lightcase:myCollection">
-                                <img src="img/img-slide/36jpg" alt="Image">
+                                <img src="img/img-slide/36.jpg" alt="Image">
                             </a>
                         </div>
                     </div>
