--- a/product1-detaisl.html
+++ b/product1-detaisl.html
@@ -261,8 +261,8 @@
                 <div class="row ltn__image-slider-5-active slick-arrow-1 slick-arrow-1-inner ltn__no-gutter-all">
                     <div class="col-lg-12">
                         <div class="ltn__img-slide-item-4">
-                            <a href="img/img-slide/36.jpg" data-rel="lightcase:myCollection">
-                                <img src="img/img-slide/36.jpg" alt="Image">
+                            <a href="img/img-slide/36.jpg.jpg" data-rel="lightcase:myCollection">
+                                <img src="img/img-slide/36.jpg.jpg" alt="Image">
                             </a>
                         </div>
                     </div>
@@ -282,15 +282,15 @@
                     </div>
                     <div class="col-lg-12">
                         <div class="ltn__img-slide-item-4">
-                            <a href="img/img-slide/39.png" data-rel="lightcase:myCollection">
-                                <img src="img/img-slide/39.png" alt="Image">
+                            <a href="img/img-slide/39.jpg" data-rel="lightcase:myCollection">
+                                <img src="img/img-slide/39.jpg" alt="Image">
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-12">
                         <div class="ltn__img-slide-item-4">
-                            <a href="img/img-slide/40.png" data-rel="lightcase:myCollection">
-                                <img src="img/img-slide/40.png" alt="Image">
+                            <a href="img/img-slide/40.jpg" data-rel="lightcase:myCollection">
+                                <img src="img/img-slide/40.jpg" alt="Image">
                             </a>
                         </div>
                     </div>
@@ -308,7 +308,7 @@
                                 <p>Podemos ajudá-lo a realizar o seu sonho de uma casa nova</p>
                             </div>
                             <div class="btn-wrapper">
-                                <a class="btn btn-effect-3 btn-white" href="contact.html">Explorar propriedades <i
+                                <a class="btn btn-effect-3 btn-white" href="shop-grid.html">Explorar propriedades <i
                                         class="icon-next"></i></a>
                             </div>
                         </div>
